# voice_ascend_whisper

./: .env.example  .gitignore  IMPLEMENTATION_STATUS.md  README.md  pyproject.toml
configs/: data_config.yaml  lora_config.yaml  training_config.yaml
scripts/: evaluate.py  inference.py  prepare_data.py  run_evaluation.py  train.py
src/finetune_whisper/utils/: device.py  metrics.py
src/voice_ascend_whisper/utils/: metrics.py
src/webapp/: config.py  database.py  main.py
src/webapp/routes/: __init__.py  audio.py  datasets.py  recordings.py  texts.py
src/webapp/services/: __init__.py  audio_service.py  export_service.py  recording_service.py  text_service.py
src/webapp/static/css/: custom.css
src/webapp/static/js/: recorder.js
src/webapp/templates/: base.html  index.html
src/webapp/templates/datasets/: detail.html  export.html  export_result.html  list.html
src/webapp/templates/recordings/: list.html  record.html
src/webapp/templates/texts/: detail.html  form.html  list.html
